centered the form

--- a/index.html
+++ b/index.html
@@ -12,19 +12,31 @@
     </header>
     <body>
         <main>
+            <div class = "container">
+
+
             <form class="sign-up-form" action="/signup" method="post">
                 <fieldset name = "sign-up">
                     <legend>
                         Sign Up
                     </legend>
                     <label for="email">Email</label>
-                    <input type="email" name="email" id ="email">
+                    <input type="email" name="email" id ="email" placeholder = "foo@bar.com" required>
                     <label for = "password">Password</label>
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="password" id="password" placeholder =
+                    "1234password" required>
 
                 </fieldset>
-
+                <button type="submit">Submit</button>
+                <p>
+                    Forgot password?
+                </p>
+                <p>
+                    Already have an account? <span>Login?</span>
+                </p>
             </form>
+
+        </div>
         </main>
 
     </body>
