--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <label for = "password">Password</label>
                     <input type="password" name="password" id="password" placeholder =
                     "1234password" required>
-<a href="#"><button type="submit">Submit</button></a>
+<a href="#"><button type="submit">Sign up</button></a>
                 </fieldset>
 
                 <p class = "forgot">
